--- a/index.css
+++ b/index.css
@@ -9,6 +9,8 @@ width: 150px;
 }
 .nav-items{
         padding: 0px 20px;
+        margin-top: auto;
+    margin-bottom: auto;
 }
 .nav-items > ul {
     display: flex;
@@ -46,4 +48,31 @@ width: 150px;
 }
 .filter {
     margin: 10px;
+     display: flex;
+}
+
+.shimmer-container
+{
+    display: flex;
+      display: flex;
+    flex-wrap: wrap;
+
+}
+.shimmer-card {
+  margin:  10px;
+   margin-top: 10px;
+    padding: 5px;
+    width: 200px;
+    height: 360px;
+    background-color: #f0f0f0;
+}
+
+.login-btn{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: 14px;
+}
+
+button.login-btn{
+    font-size: 20px;
 }
