--- a/index.css
+++ b/index.css
@@ -35,6 +35,7 @@ width: 150px;
     padding: 5px;
     width: 200px;
     border: 1px solid black;
+    height: 430px;
 }
 .res-card:hover {
      transform: scale(1.05);
@@ -75,4 +76,10 @@ width: 150px;
 
 button.login-btn{
     font-size: 20px;
+}
+
+.link-wrapper {
+  text-decoration: none;
+  color: inherit;
+  display: block;
 }
