--- a/index.css
+++ b/index.css
@@ -1,85 +1,3 @@
-.header {
-display: flex;
-justify-content: space-between;
-border: 1px solid black;
+@import "tailwindcss";
 
-}
-.logo {
-width: 150px;
-}
-.nav-items{
-        padding: 0px 20px;
-        margin-top: auto;
-    margin-bottom: auto;
-}
-.nav-items > ul {
-    display: flex;
-    list-style-type: none;
-    font-size: 24px;
-}
-.nav-items > ul > li {
-    padding: 10px;
-    margin: 10px;
-}
-.search {
-    margin: 10px;
-}
-.res-container {
-  display: flex;
-    flex-wrap: wrap;
 
-}
-.res-card {
-  margin:  5px;
-   margin-top: 10px;
-    padding: 5px;
-    width: 200px;
-    border: 1px solid black;
-    height: 430px;
-}
-.res-card:hover {
-     transform: scale(1.05);
-     cursor: pointer;
-      transition-property: all; /* or a specific property like 'transform' or 'opacity' */
-  transition-duration: 0.2s;
-  transition-timing-function: ease-out;
-}
-.res-card img {
-    padding: 0px;
-}
-.filter {
-    margin: 10px;
-     display: flex;
-}
-
-.shimmer-container
-{
-    display: flex;
-      display: flex;
-    flex-wrap: wrap;
-
-}
-.shimmer-card {
-  margin:  10px;
-   margin-top: 10px;
-    padding: 5px;
-    width: 200px;
-    height: 360px;
-    background-color: #f0f0f0;
-}
-
-.login-btn{
-    padding-top: 5px;
-    padding-bottom: 5px;
-    font-size: 14px;
-}
-
-button.login-btn{
-    font-size: 20px;
-}
-
-.link-wrapper {
-  text-decoration: none;
-  color: inherit;
-  display: block;
-}
